<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_support_text">" "<p>This app is under development. To provide feedback and report bugs please open a new issue on GitHub.</p>"
 
 "<p>"If you'd like to contribute here is the repository:
 "<a href="https://github.com/mikifus/padland">https://github.com/mikifus/padland</a> </p>"

 "<p>"German translation by rugk:
 "<a href="https://github.com/rugk">https://github.com/rugk</a> </p>"

 "<p>"Japanese translation by naofum:
 "<a href="https://github.com/naofum">https://github.com/naofum</a> </p>"

 "<p>"Malayalam translation by navi:
 "<a href="https://github.com/naviknair">https://github.com/naviknair</a> </p>"

 "</string>
    <string name="about_text">" "<p>Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License</a>.</p>" "</string>
    <string name="action_go_to_list">Back to pad list</string>
    <string name="action_newpad">Add document</string>
    <string name="action_settings">Settings</string>
    <string name="activity_padlist_implicitintent_text_copied">The text have been copied into the clipboard. Paste your clipboard data to use it.</string>
    <string name="app_name">Padland</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="basic_auth_error">Authentication failed</string>
    <string name="basic_auth_warning">The credentials will be sent without SSL encryption. This is highly discouraged. Try to use HTTPS protocol when available.</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_a_server">Choose a server (optional):</string>
    <string name="choose_default_pad_server">Choose a default pad server when opening a new one.</string>
    <string name="default_pad_server">Default pad server</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="define_appintro" />
    <string name="delete">Delete</string>
    <string name="done_button">DONE</string>
    <string name="download_pad">Save pad</string>
    <string name="error_ssl_date_invalid">SSL certificate date is invalid</string>
    <string name="error_ssl_expired">SSL certificate expired</string>
    <string name="error_ssl_id_mismatch">SSL certificate ID mismatch</string>
    <string name="error_ssl_not_yet_valid">SSL certificate is not valid yet</string>
    <string name="error_ssl_untrusted">SSL certificate is untrusted</string>
    <string name="go_pad">Create or go to</string>
    <string name="intro_fifth_desc">"Request new features or report bugs in the github repository.
 "<a href="https://github.com/mikifus/padland">https://github.com/mikifus/padland</a>" 

Press done to start!"</string>
    <string name="intro_fifth_title">Ready to go!</string>
    <string name="intro_first_desc">"Padland allows you to view, edit, organize and share collaborative documents.
 Press next to see how it works!"</string>
    <string name="intro_first_title">Welcome to Padland!</string>
    <string name="intro_fourth_desc">No problem! You can add your favorite servers. Check the settings for this and many other options!</string>
    <string name="intro_fourth_title">Custom server?</string>
    <string name="intro_second_desc">Create documents in your favorite server. You can then organize them in groups and tell your friends to join them!</string>
    <string name="intro_second_title">Create new documents</string>
    <string name="intro_third_desc">Share a document url to Padland to open it for edition.</string>
    <string name="intro_third_title">Edit existing documents</string>
    <string name="launch_intro">Launch introduction screens</string>
    <string name="library_appintro_author">Paolo Rotolo</string>
    <string name="library_appintro_authorWebsite">http://paolorotolo.github.io/</string>
    <string name="library_appintro_classPath">com.github.paolorotolo.appintro</string>
    <string name="library_appintro_isOpenSource">true</string>
    <string name="library_appintro_libraryDescription">AppIntro is a library for making a cool intro in your Android apps.</string>
    <string name="library_appintro_libraryName">AppIntro</string>
    <string name="library_appintro_libraryVersion">3.2.0</string>
    <string name="library_appintro_libraryWebsite">https://github.com/PaoloRotolo/AppIntro</string>
    <string name="library_appintro_licenseId">apache_2_0</string>
    <string name="library_appintro_repositoryLink">https://github.com/PaoloRotolo/AppIntro</string>
    <string name="network_is_unreachable">Network is unreachable.</string>
    <string name="new_pad_explanation">Introduce the pad name. If it does not exist it will be created, otherwise it will take you to the pad.</string>
    <string name="newpad_noname_warning">You must specify a name for the document.</string>
    <string name="no_custom_servers">No servers added.</string>
    <string name="no_pads">There are no saved documents.</string>
    <string name="ok">OK</string>
    <string name="padinfo_createdate">Added to list</string>
    <string name="padinfo_lastuseddate">Last viewed</string>
    <string name="padinfo_pad_info">Document information</string>
    <string name="padinfo_pad_url">Document URL</string>
    <string name="padinfo_times_accessed">Times accessed</string>
    <string name="padinfo_view_pad_button">View pad</string>
    <string name="padlist_dialog_new_padgroup_invalid">Invalid group name.</string>
    <string name="padlist_dialog_new_padgroup_label">Insert the name of the new group</string>
    <string name="padlist_dialog_new_padgroup_title">New group</string>
    <string name="padlist_document_deleted">The selected documents have been deleted</string>
    <string name="padlist_empty_createnew">Create a new document</string>
    <string name="padlist_group_deleted">Group deleted</string>
    <string name="padlist_group_select_dialog">Select group</string>
    <string name="padlist_group_unclassified_name">Unclassified</string>
    <string name="padview_dialog_basicatuh_password">Password</string>
    <string name="padview_dialog_basicatuh_title">Authentication required</string>
    <string name="padview_dialog_basicatuh_username">User name</string>
    <string name="padview_toast_blacklist_url">"The host of your URL is not in the whitelist. Add a new server in Padland's settings or choose another app."</string>
    <string name="padview_toast_invalid_url">The URL seems invalid.</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pref_header_general">Settings</string>
    <string name="pref_server_list_summary">Add your custom etherpad servers</string>
    <string name="serverlist_dialog_new_server_advanced">Advanced Options</string>
    <string name="serverlist_dialog_new_server_jquery_label">Server is supported by client-side \"etherpad-lite-jquery-plugin\".</string>
    <string name="serverlist_dialog_new_server_jquery_title">Embedding options</string>
    <string name="serverlist_dialog_new_server_lite_label">I know that this server uses Etherpad Lite.</string>
    <string name="serverlist_dialog_new_server_lite_title">Runs Etherpad Lite</string>
    <string name="serverlist_dialog_new_server_name_label">The name you want to assign to the server (optional)</string>
    <string name="serverlist_dialog_new_server_name_title">Server name</string>
    <string name="serverlist_dialog_new_server_padprefix_label">New servers (Etherpad Lite) have an url segment between the server domain and the pad name. By default it is \"p/\". Change it here if it is different.</string>
    <string name="serverlist_dialog_new_server_padprefix_title">Url pad prefix</string>
    <string name="serverlist_dialog_new_server_url_label">The url where the server is accessible. Add https:// if available.</string>
    <string name="serverlist_dialog_new_server_url_title">Server url</string>
    <string name="settings_default_color">Default color</string>
    <string name="settings_default_color_explanation">Padland will try to set your default color in all documents you open.</string>
    <string name="settings_default_username">Default username</string>
    <string name="settings_default_username_dialog_title">Set username</string>
    <string name="settings_default_username_explanation">Padland will try to set your default username in all documents you open.</string>
    <string name="settings_miscellaneous">Miscellaneous</string>
    <string name="settings_save_new_pads_desc">Automatically add your newly visited documents to your list</string>
    <string name="settings_save_new_pads_title">Auto-save new documents</string>
    <string name="title_activity_intro">Introduction</string>
    <string name="title_activity_server_list">Server list</string>
    <string name="user_preferences">User preferences</string>
</resources>