<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:layout_gravity="center" android:orientation="vertical" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="24.0dip">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serverlist_dialog_new_server_name_title" style="@style/Base.TextAppearance.AppCompat.Subhead" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serverlist_dialog_new_server_name_label" />
        <EditText android:id="@id/txt_server_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:imeOptions="actionNext" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serverlist_dialog_new_server_url_title" style="@style/Base.TextAppearance.AppCompat.Subhead" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serverlist_dialog_new_server_url_label" />
        <EditText android:id="@id/txt_server_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textUri" android:imeOptions="actionDone" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serverlist_dialog_new_server_lite_title" style="@style/Base.TextAppearance.AppCompat.Subhead" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@id/chk_lite" android:layout_width="wrap_content" android:layout_height="100.0dip" android:checked="true" android:text="@string/serverlist_dialog_new_server_lite_label" />
        </LinearLayout>
        <Button android:id="@id/advanced_options" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serverlist_dialog_new_server_advanced" style="?buttonBarButtonStyle" />
        <LinearLayout android:orientation="vertical" android:id="@id/advanced_options_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serverlist_dialog_new_server_padprefix_title" style="@style/Base.TextAppearance.AppCompat.Subhead" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serverlist_dialog_new_server_padprefix_label" />
            <EditText android:id="@id/txt_server_padprefix" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textWebEmailAddress" android:imeOptions="actionDone" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serverlist_dialog_new_server_jquery_title" style="@style/Base.TextAppearance.AppCompat.Subhead" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:id="@id/chk_jquery" android:layout_width="wrap_content" android:layout_height="100.0dip" android:text="@string/serverlist_dialog_new_server_jquery_label" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>